--- a/TEST/gridindex.html
+++ b/TEST/gridindex.html
@@ -3,21 +3,49 @@
 <head>
     <title> WireFrame 2</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
     <header>
       <ul>
-        <li><a href="#"><img id="top-picture" src="https://via.placeholder.com/200x70" alt="featured image"></a></li>
-        <li><a href="#">New Item 1</a></li>
-        <li><a href="#">New Item 2</a></li>
-        <li><a href="#">New Item 3</a></li>
-        <li><a href="#">New Item 4</a></li>
+        <li><a href="#"><img id="top-picture" src="https://via.placeholder.com/200x70/000000" alt="featured image"></a></li>
+        <div class="nav-bar">
+          <li><a href="#">Nav Item 1</a></li>
+          <li><a href="#">Nav Item 2</a></li>
+          <li><a href="#">Nav Item 3</a></li>
+          <li><a href="#">Nav Item 4</a></li>
+      </div>
       </ul>
     </header>
     <main>
+      <section>
+        <img src="https://via.placeholder.com/960x450/000000" alt="featured image">
+      </section>
+      <section>
+        <span>
+          <img src="https://via.placeholder.com/300x375/000000" alt="image"/>
+          <img src="https://via.placeholder.com/300x375/000000" alt="image"/>
+          <img src="https://via.placeholder.com/300x375/000000" alt="image"/>
+      </span>
+      </section>
+      <section>
+        <span id="left-image">
+          <img id="last-img" src="https://via.placeholder.com/480x400/000000" alt="">
+        </span>
+        <span id="right-box"> 
+            <div>
+              <h2>Featured Section Heading</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra fermentum augue, sit amet viverra lacus tincidunt a. Vestibulum ultricies massa at bibendum rutrum. Suspendisse at vehicula tellus. Etiam eget mauris ac diam fringilla porta. Aliquam euismod enim sed ipsum placerat, sit amet rhoncus augue molestie. Phasellus porta rhoncus ligula sit amet aliquam. Nunc mi velit, efficitur porttitor consequat in, pretium at massa.
+
+              Curabitur neque nunc, efficitur at metus sit amet, porta facilisis dui. Suspendisse porttitor eros faucibus ligula hendrerit volutpat. Donec dictum velit nunc, vitae ultrices nulla ultricies vitae. Aliquam at lorem mattis ex semper congue eget eget turpis. Integer sit amet diam nec erat euismod tristique in a neque. Donec tincidunt ultrices molestie. Donec et dignissim ex, eu accumsan est. Cras in erat eu ligula varius auctor in ac odio.Curabitur neque nunc, efficitur at metus sit amet, porta facilisis dui. Suspendisse porttitor eros faucibus ligula hendrerit volutpat. Donec dictum velit nunc, vitae ultrices nulla ultricies vitae. Aliquam at lorem mattis ex semper congue eget eget turpis. Integer sit amet diam nec erat euismod tristique in a neque. Donec tincidunt ultrices molestie. Donec et dignissim ex, eu accumsan est. Cras in erat eu ligula varius auctor in ac odio.</p>
+            </div>
+            <span>
+              <button type="button">Call to Action</button>
+            </span>
+        </span> 
+      </section>
     </main>
-    <footer>
+    <footer> 
     </footer>
 </body>
 </html>
