--- a/BEST VERSION/index.html
+++ b/BEST VERSION/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> WireFrame 2</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
